@@ -11,16 +11,16 @@
 <%= render :partial => 'form' %>
 
 <% content_for :sidebar do %>
-<h3>Sections</h3>
+<h3>Sections (<span class="hint"><%= link_to_function 'Reorder sections', "SectionForm.toggleSortable(this, 0, 'sections')" %></span>)</h3>
 <ul id="sections">
   <%= render :partial => 'section', :collection => @sections %>
 </ul>
 
 <% if @section.show_paged_articles? -%>
-<h3 class="tspace">Articles in "<%=h @section.name %>" (<span class="hint"><%= link_to_function 'Reorder pages', "SectionForm.toggleSortable(this, #{@section.id})" %></span>)</h3>
+<h3 class="tspace">Articles in "<%=h @section.name %>" (<span class="hint"><%= link_to_function 'Reorder pages', "SectionForm.toggleSortable(this, #{@section.id}, 'pages')" %></span>)</h3>
 <% if @section.articles.any? %>
 <p>
-  Drag the icons to the left to reorder the way in which these 
+  Drag the icons next to the articles to reorder the way in which these 
   pages show up in the menu for this section.  The top-most article is 
   shown as the default content for this section.
 </p>
