@@ -17,8 +17,8 @@ class SiteDropTest < Test::Unit::TestCase
   end
 
   def test_should_list_all_sections
-    assert_models_equal [sections(:home), sections(:about), sections(:earth), sections(:europe), sections(:africa), sections(:bucharest)], @site.sections.collect(&:section)
-    assert_equal [false, false, false, false, false, false], @site.sections.collect(&:current)
+    assert_models_equal [sections(:home), sections(:about), sections(:earth), sections(:europe), sections(:africa), sections(:bucharest), sections(:links)], @site.sections.collect(&:section)
+    assert_equal [false, false, false, false, false, false, false], @site.sections.collect(&:current)
   end
   
   def test_should_default_to_no_current_section
@@ -28,7 +28,7 @@ class SiteDropTest < Test::Unit::TestCase
   def test_should_show_current_section
     @site = SiteDrop.new(sites(:first), sections(:about))
     assert_equal sections(:about), @site.current_section.source
-    assert_equal [false, true, false, false, false, false], @site.sections.collect(&:current)
+    assert_equal [false, true, false, false, false, false, false], @site.sections.collect(&:current)
   end
   
   def test_should_list_only_blog_sections
@@ -36,7 +36,7 @@ class SiteDropTest < Test::Unit::TestCase
   end
   
   def test_should_list_only_paged_sections
-    assert_models_equal [sections(:about)], @site.page_sections.collect(&:section)
+    assert_models_equal [sections(:about), sections(:links)], @site.page_sections.collect(&:section)
   end
 
   def test_should_list_tags
